# AI-GovernanceKit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  handoff.md  pyproject.toml
.docs/: limits.md  software-overview.md
.docs/agents/: README.md
.docs/issues/templates/: task.template.md
.docs/workflows/: session-close.md
docs/: README.md  codemap.md  index.html  intro.html  melhorias.html  napkin-lessons.md  required-reading.md  software-overview.md
docs/agents/: README.md
docs/issues/: collect-and-enforce-per-host-identity-[review].md  prefixo-esteban-nas-mensagens-[solved].md
docs/issues/001-bootstrap-governancekit-[done]/: RESUME.md  epic.md
docs/issues/001-bootstrap-governancekit-[started]/: README.md  RESUME.md
docs/issues/002-align-python-installer-to-dotdocs-source-[done]/: RESUME.md
docs/issues/002-align-python-installer-to-dotdocs-source-[review]/: README.md  epic.md
docs/issues/004-doctor-false-positives-[draft]/: README.md
docs/issues/004-doctor-false-positives-[finished]/: README.md
docs/issues/templates/: README.template.md  epic.template.md
docs/project/: README.md
governancekit/: __init__.py  cli.py  codemap.py  configure.py  doctor.py  identity.py  install_agents.py  resume.py
scripts/: governancekit.env.example  notify-nexo.sh
tests/: test_codemap.py  test_configure.py  test_doctor.py  test_doctor_advisory_scan.py  test_doctor_gitignore.py  test_doctor_tracked_secrets.py  test_install_agents.py  test_install_agents_integrity.py  test_install_agents_safe_extract.py  test_resume.py
(+5 files in other folders)
