[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-governancekit"
version = "0.1.0"
description = "Local-first governance runtime tools for AI-assisted software delivery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AI GovernanceKit maintainers" }
]
dependencies = []

[project.scripts]
governancekit = "governancekit.cli:main"

[tool.setuptools.packages.find]
include = ["governancekit*"]

